--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
                 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
                     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
                     crossorigin="anonymous">
-                    <link rel="shortcut icon" href="assets/img/favicon-16x16.png" type="image/x-icon">
+                <script src="https://code.jquery.com/jquery-3.6.0.js"
+                    integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+                <link rel="shortcut icon" href="assets/img/favicon-16x16.png" type="image/x-icon">
                 <title>Olivia Ros</title>
                 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
                     integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
@@ -138,7 +140,7 @@
                             dolor
                             ullam dicta atque! Aliquam ex odio repellendus!</div>
 
-                        <button class="btn btn-outline-info">Ver más</button>
+                        <button class="btn btn-outline-info">Ocultar</button>
                     </div>
                 </div>
             </div>
@@ -158,7 +160,7 @@
                             dolor
                             ullam dicta atque! Aliquam ex odio repellendus!</div>
 
-                        <button class="btn btn-outline-info">Ver más</button>
+                        <button class="btn btn-outline-info">Ocultar</button>
                     </div>
                 </div>
 
@@ -178,7 +180,7 @@
                             dolor
                             ullam dicta atque! Aliquam ex odio repellendus!</div>
 
-                        <button class="btn btn-outline-info">Ver más</button>
+                        <button class="btn btn-outline-info">Ocultar</button>
                     </div>
                 </div>
             </div>
